--- a/frameworks/runtime-src/Classes/framework/lua-bindings/framework.ini
+++ b/frameworks/runtime-src/Classes/framework/lua-bindings/framework.ini
@@ -16,12 +16,12 @@ cocos_flags = -DANDROID -DCOCOS2D_JAVASCRIPT
 extra_arguments = %(android_headers)s %(clang_headers)s %(cxxgenerator_headers)s %(cocos_headers)s %(android_flags)s %(clang_flags)s %(cocos_flags)s %(extra_flags)s 
 
 
-headers = ../json/JSONElement.h ../scene/GameScene.h ../scene/ViewController.h ../net/NetCenter.h
+headers = ../json/JSONElement.h ../scene/GameScene.h ../net/NetCenter.h ../sqlite/SQLite.h
 
 target_namespace =
 cpp_namespace =
 
-classes = JSONObject JSONArray GameScene ViewController NetCenter NetService NetHandler NetProtocol NetRequest NetResponse NetFilter
+classes = JSONObject JSONArray GameScene ViewController NetCenter NetService NetHandler NetProtocol NetRequest NetResponse NetFilter SQLite
 
 remove_prefix =
 skip = 
