去除Game中不必要的绑定

--- a/frameworks/framework/lua-bindings/framework.ini
+++ b/frameworks/framework/lua-bindings/framework.ini
@@ -24,7 +24,7 @@ cpp_namespace =
 classes = JSONObject JSONArray GameScene ViewController NetCenter NetService NetHandler NetProtocol NetRequest NetResponse NetFilter SQLite Game
 
 remove_prefix =
-skip = 
+skip = Game::[start stop]
 base_objects =
 abstract_classes =
 #classes_have_type_info = no
