--- a/frameworks/runtime-src/proj.android/.settings/org.eclipse.cdt.core.prefs
+++ b/frameworks/runtime-src/proj.android/.settings/org.eclipse.cdt.core.prefs
@@ -1,6 +1,16 @@
+#Fri Aug 22 23:54:35 CST 2014
 eclipse.preferences.version=1
+environment/project/com.android.toolchain.gcc.1896766095/C2D_ROOT/delimiter=;
+environment/project/com.android.toolchain.gcc.1896766095/C2D_ROOT/operation=replace
+environment/project/com.android.toolchain.gcc.1896766095/C2D_ROOT/value=D\:\\WorkSpace\\soyomaker\\CocosLua\\frameworks\\cocos2d-x
+environment/project/com.android.toolchain.gcc.1896766095/CWD/delimiter=;
+environment/project/com.android.toolchain.gcc.1896766095/CWD/operation=replace
+environment/project/com.android.toolchain.gcc.1896766095/CWD/value=D\:/WorkSpace/soyomaker/CocosLua/frameworks/runtime-src/proj.android
 environment/project/com.android.toolchain.gcc.1896766095/NDK_MODULE_PATH/delimiter=\:
 environment/project/com.android.toolchain.gcc.1896766095/NDK_MODULE_PATH/operation=replace
-environment/project/com.android.toolchain.gcc.1896766095/NDK_MODULE_PATH/value=${CWD}/../../cocos2d-x\:${CWD}/../../cocos2d-x/cocos\:${CWD}/../../cocos2d-x/external
+environment/project/com.android.toolchain.gcc.1896766095/NDK_MODULE_PATH/value=${C2D_ROOT};${C2D_ROOT}/cocos;${C2D_ROOT}/external
+environment/project/com.android.toolchain.gcc.1896766095/PWD/delimiter=;
+environment/project/com.android.toolchain.gcc.1896766095/PWD/operation=replace
+environment/project/com.android.toolchain.gcc.1896766095/PWD/value=D\:/WorkSpace/soyomaker/CocosLua/frameworks/runtime-src/proj.android
 environment/project/com.android.toolchain.gcc.1896766095/append=true
 environment/project/com.android.toolchain.gcc.1896766095/appendContributed=true
